--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,12 @@
 
 # Site settings
 title: The Dude
-email: your-email@domain.com
-description:  Write an awesome description for your new site here. You can edit this
-              line in _config.yml. It will appear in your document head meta (for
-              Google search results) and in your feed.xml site description.
+email: gunho979@gmail.com
+description:  초급 개발자의 메모장입니다.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: 
+github_username:  sys970717
 
 # Build settings
 markdown: kramdown
