--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,11 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: The Dude
+title: 메모만이 살길이다!
 email: gunho979@gmail.com
-description:  초급 개발자의 메모장입니다.
+description:  Write an awesome description for your new site here. You can edit this
+              line in _config.yml. It will appear in your document head meta (for
+              Google search results) and in your feed.xml site description.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: 
