--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: 메모만이 살길이다!
-email: gunho979@gmail.com
+email: sys970717@naver.com
 description:  Write an awesome description for your new site here. You can edit this
               line in _config.yml. It will appear in your document head meta (for
               Google search results) and in your feed.xml site description.
